--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,11 @@
 .menu{
     display: flex;
     flex-direction: row;
-    width: 100vw;
+    width: 90vw;
     background-color:white;
     height: 10vh;
-    margin: 1em;
+    margin: 0;
+   
     
 
 }
@@ -42,8 +43,8 @@
     width: 10%;
     height:100%;
 
-    background-image: url(/images/java\ \(2\).png);
-    background-size:cover;
+    background-image: url(/images/java.gif);
+    background-size:contain;
     background-position:center;
     background-repeat:no-repeat;  
     
@@ -80,19 +81,24 @@
 
 section{
     height: 90vh;
-    width: 60vw;
-    margin: auto;
+    width: 90vw;
+    margin: 0;
     
 
 }
 
 #index{
 
+    width:90vw;    
+
+
     background-image: url(/images/java-logo.png);
     
-    background-position:center right;
+    background-position:center center;
     background-repeat:no-repeat;  
-    background-size: 50em;
+    background-size: 30%;
+    margin-left: 5vw;
+    
 }
 
 #index h1{
@@ -100,16 +106,56 @@ section{
     color: blue;
     font-size: 4em;
     font-weight: 900;
+    margin: 0;
+    
 }
 
 #index p{
     color: rgb(73, 73, 245);
     font-size: 2em;
+    margin: 0;
+
 }
 
 #index p span{
     color: rgba(238, 54, 54, 0.938);
     font-size: 0.5em;
     font-weight: 900;
+}
+
+
+/* SECCION TOMCAT */
+
+section:nth-of-type(2){
+    background-color: #EEEEEE;
+
+}
+
+#Tomcat::before{
+    content:" ";
+    position: absolute;
+    width: 80vw;
+    height: 0.3em;
+    
+    background-color: blue;
+    margin-left:20vw;
+    
+    
+}
+#Tomcat{
+   
+    
+    
+    width: 100vw;
+}
+
+#Tomcat h1{
+    padding-top: 1em;
+    margin-left: 7.5em;
+    font-weight: 900;
+    text-transform: uppercase;
+    font-size: 3em;
+    color: blue
+
 }
     
