--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,21 @@ section{
 }
 
 
+
+/* MENU VERTICAL */
+.verticalmenu{
+    position: fixed;
+    top: 50vh;
+    left: 10vh;
+}
+.verticalmenu a{
+    width: 10vw;
+    height: 10vh;
+    border: 1px solid black;
+    border-radius: 10em;
+}
+
+
 /* SECCION TOMCAT */
 
 section:nth-of-type(2){
