--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@
     
 }
 
+body{
+    margin:0;
+    padding: 0;
+}
+
 
 /* NAV */
 
@@ -68,7 +73,7 @@
     color: blue;
     background: linear-gradient(to right, white, rgba(84, 84, 251, 0.586));
     border: solid blue 1px;
-    font-size: 1.3em;
+    font-size: 1.3vw;
     font-weight: 900;
     border-radius: 10px;
     display: flex;
@@ -91,55 +96,167 @@
 
 /* SECCIONES */
 
+.bold{
+    color:blue;
+    font-weight: 900;
+}
+
+
 section{
     height: 180vh;
-    width: 90vw;
+    width: 100%;
     margin: 0;
+   
     
 
 }
 
 #index{
 
-    width:60vw; 
+    
+
+    width:100vw; 
     height: 70vh;   
 
 
-    background-image: url(/images/java-logo.png);
+    background-image: url(/images/image-from-rawpixel-id-6117897-original.png);
     
-    background-position:center right;
-    background-repeat:no-repeat;  
-    background-size: 30%;
-    letter-spacing: 0.7em;
+    background-position:center;
+    background-repeat:repeat-x;  
+    background-size: 35%;
     
-    margin-top: 6em;
-    margin-left: 17vw;
-    margin-bottom: 0;
+    letter-spacing: 0.7vh;
+    
+    margin-top: 16vh;
+    margin-left: 0vw;
+    margin-bottom: 15vh;
     margin-right: 0;
+
+    
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 5vw;
     
     
 }
 
-#index h1{
-    margin-top: 3em;
+#index .parte1{
+    
+   
+    
     color: blue;
-    font-size: 4em;
+    font-size: 1.6vw;
     font-weight: 900;
-    margin: 0;
+    position: absolute;
+    top: 40vh;
+    left: 6vw;
+    padding: 0.5vh;
+    background-color: #EEA1D5;
+    box-shadow: 1px 12px 33px rgba(0, 0, 0, 0.5);
+    
     
 }
 
-#index p{
-    color: rgb(73, 73, 245);
-    font-size: 2em;
-    margin: 0;
+#index .parte1::before{
+    border: 25px solid #EEA1D5;
+    content: '';
+    border-left-color: transparent;
+    border-bottom-color: transparent;
+    border-right-color: transparent;
+    position: absolute;
+    bottom: -48px;
+    right: 15px;
+}
+
+
+#index .parte12{
+    
+   
+    
+    color: blue;
+    font-size: 1.6vw;
+    font-weight: 900;
+    position: absolute;
+    top: 68vh;
+    left: 19vw;
+
+    padding: 0.5vh;
+    background-color: #EEA1D5;
+    box-shadow: 1px 12px 33px rgba(0, 0, 0, 0.5);
+     
+}
+#index .parte12::before{
+    border: 25px solid #EEA1D5;
+    content: '';
+    border-left-color: transparent;
+    border-bottom-color: transparent;
+    border-right-color: transparent;
+    position: absolute;
+    bottom: -44px;
+    left: 25px;
+    transform: rotate(8deg);
+     
+}
+
+
+
+#index .parte2{
+    color: rgb(87, 87, 243);
+    font-size: 1.5vw;
+    font-weight: 900;
+    position: absolute;
+    top: 40vh;
+    left: 45vw;
+
+    padding: 0.5vh;
+    background-color: #c6c4f7;
+    box-shadow: 1px 12px 33px rgba(0, 0, 0, 0.5); 
+    
 
 }
 
-#index p span{
+
+#index .parte2::before{
+    border: 25px solid #c6c4f7;
+    content: '';
+    border-left-color: transparent;
+    border-bottom-color: transparent;
+    border-right-color: transparent;
+    position: absolute;
+    bottom: -44px;
+    left: 25px;
+    transform: rotate(8deg);
+     
+}
+
+#index .parte3{
     color: rgba(238, 54, 54, 0.938);
-    font-size: 0.5em;
+    font-size: 1.2vw;
     font-weight: 900;
+    position: absolute;
+    top: 70vh;
+    left: 70vw; 
+    
+    padding: 0.5vh;
+    background-color: #EEA1D5;
+    box-shadow: 1px 12px 33px rgba(0, 0, 0, 0.5);
+    border-radius: 5px; 
+    
+    
+}
+
+#index .parte3::before{
+    border: 25px solid #EEA1D5;
+    content: '';
+    border-left-color: transparent;
+    border-bottom-color: transparent;
+    border-right-color: transparent;
+    position: absolute;
+    bottom: -44px;
+    right: 25px;
+    transform: rotate(-8deg);
+     
 }
 
 .init {
@@ -161,17 +278,31 @@ section{
 
 
 /* MENU VERTICAL */
-.verticalmenu{
+.menu-wrap {
+    background-color: #000;
+    width: 50px;
+    height: 100vh;
     position: fixed;
-    top: 50vh;
-    left: 10vh;
-}
-.verticalmenu a{
-    width: 10vw;
-    height: 10vh;
-    border: 1px solid black;
-    border-radius: 10em;
-}
+    top: 0px;
+    left: 0px;
+    z-index: 99;
+  }
+  
+  .menu2 {
+    height: 40vh;
+    width: 50px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    align-items: center;
+  
+  }
+  .menu2 span {
+    color: #fff;
+    line-height: 42px;
+    font-size: 18px;
+    transform: rotate(270deg);
+  }
 
 
 /* SECCION TOMCAT */
@@ -263,8 +394,74 @@ section:nth-of-type(2){
 
 
 
+/* SECCION GLASSFISH */
+
+section:nth-of-type(3){
+    background-color: #e4e2e2;
+    height: 230vh;
+
+}
 
 
+#Glassfish::before{
+    content:" ";
+    position: absolute;
+    width: 80vw;
+    height: 0.3em;
+    
+    
+    background-color: blue;
+    margin-left:0vw;
+    
+    
+}
+#Glassfish{
+   
+    
+    
+    width: 100vw;
+}
+
+#Glassfish h1{
+    padding-top: 1em;
+    margin-left: 7.5em;
+    font-weight: 900;
+    text-transform: uppercase;
+    font-size: 3em;
+    color: blue
+
+}
+
+
+/* SECCION WILDFLY */
+
+section:nth-of-type(4){
+    background-color: #EEEEEE;
+    height: 180vh;
+
+}
+
+#Wildfly::before{
+    content:" ";
+    position: absolute;
+    width: 80vw;
+    height: 0.3em;
+    
+    background-color: blue;
+    margin-left:20vw;
+    
+    
+}
+
+#Wildfly h1{
+    padding-top: 1em;
+    margin-left: 7.5em;
+    font-weight: 900;
+    text-transform: uppercase;
+    font-size: 3em;
+    color: blue
+
+}
 
 
 /* ANIMACIONES */
