--- a/styles.css
+++ b/styles.css
@@ -104,9 +104,9 @@ body {
 
 
 section {
-    height: 180vh;
+    /* height: 180vh;
     width: 100%;
-    margin: 0;
+    margin: 0; */
 
 
 
@@ -315,7 +315,7 @@ section {
 
 section:nth-of-type(2) {
     background-color: #EEEEEE;
-    height: 190vh;
+    /* height: 190vh; */
 
 }
 
@@ -362,9 +362,13 @@ section:nth-of-type(2) {
 
 .listatom li {
     counter-increment: detail-counter;
-    margin: 1.5em;
+    
     border-bottom: dashed black 0.1em;
-    padding: 0.3em;
+    padding: 2rem;
+}
+
+.listatom li:nth-last-of-type(1) {
+    border: none;
 }
 
 
@@ -406,7 +410,7 @@ section:nth-of-type(2) {
 
 section:nth-of-type(3) {
     background-color: #e4e2e2;
-    height: 230vh;
+    /* height: 230vh; */
 
 }
 
@@ -445,7 +449,7 @@ section:nth-of-type(3) {
 
 section:nth-of-type(4) {
     background-color: #EEEEEE;
-    height: 180vh;
+    /* height: 180vh; */
 
 }
 
@@ -475,6 +479,172 @@ section:nth-of-type(4) {
     padding: 1vh;
 }
 
+
+
+
+/* SECCION FAQ */
+
+section:nth-of-type(5) {
+    background-color: #C6C4F7;
+    padding-bottom: 5rem;
+    
+
+}
+
+#faq::before {
+    content: " ";
+    position: absolute;
+    width: 80vw;
+    height: 0.3em;
+
+    background-color: rgb(0, 0, 0);
+    margin-left: 20vw;
+
+
+}
+
+#faq h1 {
+    padding-top: 1em;
+    margin-left: 7.5em;
+    font-weight: 900;
+    text-transform: uppercase;
+    font-size: 3em;
+    color: rgb(0, 0, 0);
+    margin-bottom: 5vh;
+
+}
+
+.contenedor{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4vh;
+    font-size: 3vh;
+}
+
+.q{
+    background-color: white;
+    border-radius: 10px;
+    color: black;
+    font-weight: 900;
+    padding: 2vh;
+    width: 60vw;
+    cursor: pointer;
+}
+
+.h{
+  display:none;
+  max-width: 60vw;
+  margin: 3vh;
+  padding: 2vh;
+  font-weight: 700;
+  
+}
+
+.q:active >.h{
+
+    display:block;
+
+}
+
+
+
+
+/* FOOTER */
+
+#about{
+    background-color: #F5F5F5;
+   
+   
+
+}
+
+#about::before {
+    content: " ";
+    position: absolute;
+    width: 80vw;
+    height: 0.3em;
+
+    background-color: rgb(0, 0, 0);
+    margin-right: 20vw;
+
+
+}
+
+#about h1 {
+    padding-top: 1em;
+    margin-left: 7.5em;
+    font-weight: 900;
+    text-transform: uppercase;
+    font-size: 3em;
+    color: rgb(0, 0, 0);
+    margin-bottom: 5vh;
+    
+
+}
+
+.footcont{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 70vw; 
+    margin:auto;
+}
+
+.image_author{
+    width: 30rem;
+    height: 15rem;
+    background-image: url(./images/me.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50%;
+    margin: 3vw;
+    
+}
+
+.contenido{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+}
+
+
+
+.description{
+    font-size: 2vh;
+}
+
+.redes{
+    display: flex;
+    justify-content: flex-start;
+    
+}
+
+.linkedin{
+    width: 2rem;
+    height: 2rem;
+    background-image: url(./images/linkedin.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 1rem;
+}
+
+.github{
+    width: 1.8rem;
+    height: 1.8rem;
+    background-image: url(./images/github.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 1rem;
+
+}
 
 /* ANIMACIONES */
 
